--- a/build.gradle
+++ b/build.gradle
@@ -17,14 +17,12 @@ task(type: JavaExec) {
 
 dependencies {
 
+    compile 'commons-codec:commons-codec:1.11'
     compile 'org.apache.commons:commons-lang3:3.7'
     compile 'org.apache.httpcomponents:httpclient:4.5.6'
-    // https://mvnrepository.com/artifact/com.github.arteam/simple-json-rpc-client
     compile 'com.github.arteam:simple-json-rpc-client:0.9'
-
-
-    // https://mvnrepository.com/artifact/com.github.arteam/simple-json-rpc-server
     compile 'com.github.arteam:simple-json-rpc-server:0.9'
+
     testCompile 'junit:junit:4.12'
 }
 
